[Style] og 이미지 교체하라

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="한국 출발 배송대행 서비스 BADARA">
     <meta property="og:description" content="한국출발 배송대행 사이트 입니다. 하루에 약 100건 정도 물품을 해외로 발송하고 있습니다." >
-    <meta property="og:image" content="%PUBLIC_URL%/favicon.ico" >
+    <meta property="og:image" content="%PUBLIC_URL%/logo.png" >
     <meta
       name="description"
       content="한국출발 배송대행 서비스 BADARA"
