[Style] title명 변경하라

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-        <title>Badara</title>
+        <title>한국출발 배송대행 서비스 바다라 - BADARA</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
