--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,16 @@
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
         <title>한국출발 배송대행 서비스 바다라 - BADARA</title>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-1C3K12LBGL"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag('js', new Date());
+            gtag('config', 'G-1C3K12LBGL');
+        </script>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
