--- a/public/index.html
+++ b/public/index.html
@@ -20,14 +20,15 @@
 
         <title>한국출발 배송대행 서비스 바다라 - BADARA</title>
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-1C3K12LBGL"></script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-196858188-1"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag() {
                 dataLayer.push(arguments);
             }
             gtag('js', new Date());
-            gtag('config', 'G-1C3K12LBGL');
+            gtag('config', 'UA-196858188-1');
         </script>
     </head>
     <body>
