--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-        <title>한국출발 배송대행 서비스 바다라 - BADARA</title>
+        <title>한국출발 국제택배 배송대행 서비스 바다라 - BADARA</title>
     </head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
