[Fix] 애널리틱스 코드를 넣어라

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,15 @@
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
         <title>한국출발 국제택배 배송대행 서비스 바다라 - BADARA</title>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-196858188-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag('js', new Date());
+            gtag('config', 'UA-196858188-1');
+        </script>
     </head>
 
     <body>
